--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/Portfolio
-PORT=5000 
+MONGODB_URI=mongodb+srv://tushararora5741:<db_password>@cluster0.dijzp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
