--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://tushararora5741:<db_password>@cluster0.dijzp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://tushararora5741:Mongodb@3214@cluster0.dijzp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
