Fix MongoDB connection handling

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://tushararora5741:Mongodb@3214@cluster0.dijzp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://portfolio3214:portfolio3214@cluster0.1blji.mongodb.net/portfolio
 PORT=5000
